# megamarket

./: .gitignore  README.md  vercel.json
.github/workflows/: api.yml  web.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  test_fase7.py  test_fase7_nokey.py
apps/api/app/: main.py
apps/api/app/core/: logging_config.py  rate_limit.py  settings.py  supabase.py
apps/api/app/routers/: assistant.py  cart.py  categories.py  favorites.py  health.py  orders.py  payments.py  products.py  recommendations.py
apps/api/app/routers/admin/: __init__.py  categories.py  coupons.py  imports.py  inventory.py  orders.py  products.py
apps/api/app/schemas/: admin.py  cart.py  category.py  chat.py  order.py  payment.py  product.py
apps/api/tests/: test_smoke.py
apps/web/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AddToCartButton.tsx  Breadcrumbs.tsx  (+8 more)
infra/cloud-run/: service.yaml  setup-secrets.sh
infra/vercel/: vercel.json
supabase/: apply_migration.py  config.toml  test_search.py
supabase/migrations/: 20260601000000_extensions_enums.sql  20260601010000_profiles.sql  20260601020000_categories.sql  20260601030000_products.sql  20260601040000_commerce.sql  20260601050000_reviews_favorites.sql  20260601060000_audit_chat.sql  20260601070000_import_jobs.sql  20260601080000_rls_policies.sql  20260601090000_search_vector.sql  20260601100000_auth_trigger.sql
supabase/policies/: rls_reference.md
supabase/seed/: apply_seed.py  fix_prices.sql  seed.sql
(+24 files in other folders)
