[project]
name = "megamarket-api"
version = "0.1.0"
description = "MegaMarket Backend API"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "supabase>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",      # HTTP client para PayPal y Wompi APIs
    "python-multipart>=0.0.9",  # Form/file upload en FastAPI
    "openpyxl>=3.1.0",          # Parseo de .xlsx en imports
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",      # TestClient de FastAPI (también en prod — duplicado tolerado)
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
